<resources>
    <string name="savesave">./apollo-codegen download-schema https://api.yelp.com/v3/graphql --output schema.json
        --header "Authorization: Bearer
        3jrKho3XbBsFoKEBYxp1mpfelkxZtKxMTMUj5L6mfNsbZrtshVMOPOypHcDJSN38-zhP-Y_tHoi95EZLeVwUJgG3AFyvu76AkmSAE8uh4HVpLQfIWndMTPOG9ocKXHYx"
    </string>
    <string name="app_name">Quotes</string>
    <string name="language">en</string>
    <string name="app_scheme">https</string>
    <string name="app_base_url">api.yelp.com/v3/graphql</string>
    <string name="sport_base_url">sportsop-soccer-sports-open-data-v1.p.mashape.com</string>
    <string name="sport_apikey">ftHoprj6CGmshGTkHN641OnT91qxp1odrEjjsnukrGxRpG2liY</string>
    <string name="client_id">xcMc1qYPaNFaBxC07gIIsA</string>
    <string name="app_api_key">
        3jrKho3XbBsFoKEBYxp1mpfelkxZtKxMTMUj5L6mfNsbZrtshVMOPOypHcDJSN38-zhP-Y_tHoi95EZLeVwUJgG3AFyvu76AkmSAE8uh4HVpLQfIWndMTPOG9ocKXHYx
    </string>
    <string name="quote_header">Authorization</string>
    <string name="quote_api_key">Token token=f343dee03cb02b63a724fc4de7b2816f</string>
    <string name="quote_url">favqs.com/api/</string>

    <string name="input_name_sample">User Name</string>
    <string name="input_email_sample">Email</string>
    <string name="input_password_sample">Password</string>
    <string name="action_register">Register</string>
    <string name="already_has_account">Already a member? Login</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_decide">Set</string>
    <string name="dialog_ok">OK</string>

    <string name="boot_completed">boot_completed</string>

    <string name="menu_account">My profile</string>
    <string name="menu_dailyquote">Quotes</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_logout">Logout</string>
    <string name="retry">Retry</string>
    <string name="network_error_title">No network</string>
    <string name="network_error_msg">You are not connected to the Internet</string>
    <string name="error_username">Must contain only letters numbers and underscores</string>
    <string name="error_email">Must be a valid email address</string>
    <string name="error_password">Length must be between 5 and 120 characters</string>

    <string name="label_sign_up">Sign up</string>
    <string name="label_sign_in">Sign in</string>
    <string name="user_name_hint">Eg: vegeta</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_no_account">No account yet? Create one</string>
    <string name="email_hint">Eg: vegeta@gmail.com</string>
    <string name="follower">Followers:</string>
    <string name="following">Following:</string>
    <string name="pro_user">Pro User:</string>

</resources>
