<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="viewModel"
                type="giavu.co.jp.activity.login.LoginViewModel">
        </variable>
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@color/white"
                  android:orientation="vertical"
                  android:scrollbarAlwaysDrawVerticalTrack="true">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:orientation="vertical"
                android:paddingTop="50dp">
            <TextView
                    android:paddingTop="50dp"
                    android:paddingBottom="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="50sp"
                    android:text="@string/label_sign_in"
                    android:fontFamily="@font/wallpoet_regular"
                    android:textColor="@color/btn_bg"/>

            <EditText
                    android:id="@+id/username"
                    android:layout_width="fill_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/bg_bottom_divider_edit_text"
                    android:drawableTint="@color/btn_bg"
                    android:textColor="@color/black"
                    android:hint="@string/input_name_sample"
                    android:drawablePadding="10dp"
                    android:textColorHint="@color/border_button"
                    android:drawableStart="@drawable/ic_id_mail_white"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.username}"
                    android:singleLine="true"/>

            <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/bg_bottom_divider_edit_text"
                    android:layout_marginTop="16dp"
                    android:drawableTint="@color/btn_bg"
                    android:textColor="@color/black"
                    android:textColorHint="@color/border_button"
                    android:hint="@string/input_password_sample"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_lock_white"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}"
                    android:singleLine="true"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    style="@style/MainPrimaryButton"
                    android:text="@string/label_sign_in"
                    android:textAllCaps="true"
                    app:onClick="@{() -> viewModel.login()}"
                    android:enabled="@{safeUnbox(viewModel.loginBtnEnable)}"
                    android:textSize="18sp"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_10dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="22dp"
                    style="@style/MainPrimaryButton"
                    android:text="@string/action_register"
                    android:textAllCaps="true"
                    app:onClick="@{() -> viewModel.register()}"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:background="@color/grayish_blue500"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="22dp"
                    android:layout_marginTop="50dp"
                    android:textColor="@color/white"
                    android:text="I'm a guest"
                    app:onClick="@{() -> viewModel.loginByGuest()}"/>

        </LinearLayout>
    </LinearLayout>
</layout>
